--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       content="0 505 C477"
     />
     <link rel="manifest" href="/manifest.json">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="mobile-web-app-capable" content="yes" />
+<meta name="mobile-web-app-status-bar-style" content="black-translucent">
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
 
     <link rel="icon" href="/logo/favicon.svg" />
